FIXED: Align CSS styling to reflect phase 4's intended design

--- a/main.css
+++ b/main.css
@@ -118,7 +118,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 80%;
-    background-color: red;
 }
 .boards__board {
     background-color: hotpink;
